--- a/project1.ipynb
+++ b/project1.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/tylerschuessler/math_data_science_course_test/blob/main/project1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -37,7 +48,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# your code here"
+        "#didnt save but going to try again"
       ],
       "metadata": {
         "id": "y_e6lM_NEwwD"
@@ -84,10 +95,24 @@
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=0)"
       ],
       "metadata": {
-        "id": "YdjNvnAGkRpe"
+        "id": "YdjNvnAGkRpe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ec539ba7-31ca-4b25-9216-7cb4ab8bd6e6"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index(['MedInc', 'HouseAge', 'AveRooms', 'AveBedrms', 'Population', 'AveOccup',\n",
+            "       'Latitude', 'Longitude'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
