--- a/guest_lecture.ipynb
+++ b/guest_lecture.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFC4D3o/3vvCxOyx7PRqIO",
+      "authorship_tag": "ABX9TyO/I10BZ4aMTXeAogKOub3M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -670,6 +670,30 @@
     {
       "cell_type": "code",
       "source": [
+        "![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)\n"
+      ],
+      "metadata": {
+        "id": "JsVUQBKt_hLo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cfed168b-8af7-402d-aa98-f903a70faac5"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/bin/bash: -c: line 1: syntax error near unexpected token `('\n",
+            "/bin/bash: -c: line 1: `[Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# --------------------\n",
         "# Imports\n",
         "# --------------------\n",
@@ -684,7 +708,7 @@
       "metadata": {
         "id": "xyqvFEca2nfi"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -698,13 +722,13 @@
         "diabetes = load_diabetes()"
       ],
       "metadata": {
-        "id": "kTEfY4ft2xvc",
-        "outputId": "01f7d128-f386-42eb-8438-aadfc9a27f3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kTEfY4ft2xvc",
+        "outputId": "01f7d128-f386-42eb-8438-aadfc9a27f3c"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +749,7 @@
       "metadata": {
         "id": "zlVCkCO125ft"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -734,13 +758,13 @@
         "print(iris.DESCR)"
       ],
       "metadata": {
-        "id": "3m78Koo55bai",
-        "outputId": "58f3ebdb-18ac-43d8-a3e8-13e89090810b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3m78Koo55bai",
+        "outputId": "58f3ebdb-18ac-43d8-a3e8-13e89090810b"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -820,13 +844,13 @@
         "iris.feature_names"
       ],
       "metadata": {
-        "id": "zk61XBrm3gV4",
-        "outputId": "4f2d572e-140b-4ad5-d955-a0c946038a40",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zk61XBrm3gV4",
+        "outputId": "4f2d572e-140b-4ad5-d955-a0c946038a40"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -849,13 +873,13 @@
         "iris.target_names"
       ],
       "metadata": {
-        "id": "sV6lRL_D4FQ7",
-        "outputId": "f9d537d2-4544-4c24-a242-6cb129430f72",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sV6lRL_D4FQ7",
+        "outputId": "f9d537d2-4544-4c24-a242-6cb129430f72"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -881,14 +905,14 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "p5NBxLf83RdE",
-        "outputId": "a111ea47-aed4-4ec1-d4d9-eb3247ecfc89",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 410
-        }
+        },
+        "id": "p5NBxLf83RdE",
+        "outputId": "a111ea47-aed4-4ec1-d4d9-eb3247ecfc89"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -908,13 +932,13 @@
         "print(faces.DESCR)"
       ],
       "metadata": {
-        "id": "agQRxNrJ5X-c",
-        "outputId": "4e016a23-05ee-4f3c-ebce-db7c32920b04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "agQRxNrJ5X-c",
+        "outputId": "4e016a23-05ee-4f3c-ebce-db7c32920b04"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -975,13 +999,13 @@
         "faces.data.shape"
       ],
       "metadata": {
-        "id": "BFC_z-_y4ObT",
-        "outputId": "0cc20537-1a5b-4f01-e5c9-c216c75b30a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BFC_z-_y4ObT",
+        "outputId": "0cc20537-1a5b-4f01-e5c9-c216c75b30a3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1001,13 +1025,13 @@
         "faces.images.shape"
       ],
       "metadata": {
-        "id": "aeA3M4Wc4l3z",
-        "outputId": "5ddc3616-da69-44d0-87f2-0f3333a077c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aeA3M4Wc4l3z",
+        "outputId": "5ddc3616-da69-44d0-87f2-0f3333a077c3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1033,14 +1057,14 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "2sAnScr43Vzj",
-        "outputId": "2b065867-5897-4d1f-abda-8e9ff1c5d365",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 451
-        }
+        },
+        "id": "2sAnScr43Vzj",
+        "outputId": "2b065867-5897-4d1f-abda-8e9ff1c5d365"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1060,13 +1084,13 @@
         "print(diabetes.DESCR)"
       ],
       "metadata": {
-        "id": "gksNWsip5Csh",
-        "outputId": "39f7a2fd-ac79-4f00-8439-118582202fa0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gksNWsip5Csh",
+        "outputId": "39f7a2fd-ac79-4f00-8439-118582202fa0"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1160,14 +1184,14 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "09PGxLiE5msm",
-        "outputId": "c5fc315e-327b-45c5-e364-b62ed381d8ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 807
-        }
+        },
+        "id": "09PGxLiE5msm",
+        "outputId": "c5fc315e-327b-45c5-e364-b62ed381d8ee"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1198,13 +1222,13 @@
         "print(\"Regression (Diabetes) RMSE:\", np.sqrt(mean_squared_error(y_test, y_pred)))"
       ],
       "metadata": {
-        "id": "dBDtZtwF-pOv",
-        "outputId": "ede68998-6b7f-4cb4-d27e-381f3a7e6dfb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dBDtZtwF-pOv",
+        "outputId": "ede68998-6b7f-4cb4-d27e-381f3a7e6dfb"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1235,13 +1259,13 @@
         "print(\"Regression (Diabetes) RMSE:\", np.sqrt(mean_squared_error(y_test, y_pred)))"
       ],
       "metadata": {
-        "id": "_KTfS1DnAFaM",
-        "outputId": "407c32cf-c5c6-4436-df59-c897ccb2463c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_KTfS1DnAFaM",
+        "outputId": "407c32cf-c5c6-4436-df59-c897ccb2463c"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1265,13 +1289,13 @@
         "print(\"Regression (Diabetes) RMSE:\", np.sqrt(mean_squared_error(y_test, y_pred)))"
       ],
       "metadata": {
-        "id": "pYrPB6ggAeb8",
-        "outputId": "01e7e875-627c-4453-b61f-d6f2dbdcf649",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pYrPB6ggAeb8",
+        "outputId": "01e7e875-627c-4453-b61f-d6f2dbdcf649"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1284,13 +1308,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "seYPgQGQt33f",
-        "outputId": "1ea40f08-36fd-4e54-c3a8-2664ed0198d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1ea40f08-36fd-4e54-c3a8-2664ed0198d7"
       },
       "outputs": [
         {
@@ -1331,13 +1355,13 @@
         "\n"
       ],
       "metadata": {
-        "id": "OnqabWYnBLwo",
-        "outputId": "e39a4716-bbaa-4526-97b9-bde448addbed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OnqabWYnBLwo",
+        "outputId": "e39a4716-bbaa-4526-97b9-bde448addbed"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1405,8 +1429,6 @@
         "interact(show_pca_reconstruction, n_components=widgets.IntSlider(min=2, max=102, step=20, value=50))"
       ],
       "metadata": {
-        "id": "wqUwxG6dCO3T",
-        "outputId": "188a45da-cb1c-4535-9db5-3153475611b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 990,
@@ -1419,9 +1441,11 @@
             "33ac7b2abb4145db89c9a274f64928b3",
             "b0202c6b1f5245f380b70dfc6774fd9e"
           ]
-        }
+        },
+        "id": "wqUwxG6dCO3T",
+        "outputId": "188a45da-cb1c-4535-9db5-3153475611b8"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1475,7 +1499,7 @@
       "metadata": {
         "id": "fCdR4SaLCTcN"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1563,8 +1587,6 @@
         "         n_components=widgets.IntSlider(min=5, max=200, step=5, value=50))\n"
       ],
       "metadata": {
-        "id": "OEG83Sj6LHaV",
-        "outputId": "c442b760-ba06-496a-a387-b7765f777bce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000,
@@ -1580,9 +1602,11 @@
             "d7a4401466a24d0eae67f8dfe47518d5",
             "f0825c86b8e84f939d67e29e2341f27f"
           ]
-        }
+        },
+        "id": "OEG83Sj6LHaV",
+        "outputId": "c442b760-ba06-496a-a387-b7765f777bce"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
